@@ -1,3 +1,9 @@
+2009-07-20  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/plot2d.c (store2d_point):  If the plot uses palette colors taken
+	from the Z coordinate, then also use Z to auto-scale cbrange.
+	Bug #2133407
+
 2009-07-16  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/save.c: The "set view" command was incorrectly saved twice.
